<resources>
    <string name="app_name">Foody</string>
    <string name="username_hint_value">Enter your email</string>
    <string name="or_text">OR</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="login_btn">Login</string>
    <string name="instructions">Instructions</string>
    <string name="search">Search</string>
    <string name="home_bottom_icon">Home</string>
    <string name="profile_bottom_icon">Profile</string>
    <string name="country_bottom_icon">Country</string>
    <string name="fav_bottom_icon">Favourite</string>
    <string name="plan_button_icon">Your Plans</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>


    <string name="search_bottom_icon">Search</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="countries">Countries</string>
    <string name="my_favourites">My Favourites</string>
    <string name="categories">Categories</string>
    <string name="all">All Meals</string>
    <string name="youtube">Youtube</string>
    <string name="addToFavBtn">Add to Favourite</string>
    <string name="addToPlan">Add to your Plan</string>

    <string name="search_county">Country</string>
    <string name="search_ingredients">Ingredient</string>
    <string name="search_categories">Category</string>
    <string name="search_meals">Meals</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search on Foody</string>
    <string name="change_ur_username">Change your username</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="logout">Logout</string>
    <string name="your_plans">Your Plans</string>
    <string name="delete">Delete Account</string>

    <string-array name="list_item_settings">
        <item>Your Favourites</item>
        <item>Your Plans</item>
        <item>Delete Account</item>
        <item>Logout</item>

    </string-array>
</resources>